--- a/Accueil.html
+++ b/Accueil.html
@@ -17,5 +17,9 @@
         <a href="CV.pdf">CV</a>
         <a href="Contact.html">Contact</a>
     </div>
+
+    <div class="content">
+        <h3>Accueil</h3>
+        <p>Bienvenue sur mon portfolio !</p>
 </body>
 </html>
