--- a/Accueil.html
+++ b/Accueil.html
@@ -13,6 +13,7 @@
     </div>
 
     <div class="navbar">
+        <a href="Accueil.html">Accueil</a>
         <a href="Compétences.html">Compétences</a>
         <a href="CV.pdf">CV</a>
         <a href="Contact.html">Contact</a>
