--- a/Compétences.html
+++ b/Compétences.html
@@ -13,7 +13,8 @@
     </div>
 
     <div class="navbar">
-        <a href="Accueil.html">Acceuil</a>
+        <a href="Accueil.html">Accueil</a>
+        <a href="Compétences.html">Compétences</a>
         <a href="CV.pdf">CV</a>
         <a href="Contact.html">Contact</a>
     </div>
