--- a/Contact.html
+++ b/Contact.html
@@ -14,8 +14,9 @@
 
     <div class="navbar">
         <a href="Accueil.html">Accueil</a>
-        <a href="CV.pdf">CV</a>
         <a href="Compétences.html">Compétences</a>
+        <a href="CV.pdf">CV</a>
+        <a href="Contact.html">Contact</a>
     </div>
 </body>
 </html>
