edit de plein de truc

--- a/Accueil.html
+++ b/Accueil.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <h1>Théo Vienne</h1>
-        <h2>Etudiant en BUT Informatique</h2>
+        <h2>Etudiant en 3éme année de BUT Informatique</h2>
     </div>
 
     <div class="navbar">
@@ -17,11 +17,26 @@
         <a href="Compétences.html">Compétences</a>
         <a href="CV.pdf">CV</a>
         <a href="Contact.html">Contact</a>
+        <a href="Projets.html">Projets</a>
+        <a href="Experience.html">Expériences</a>
     </div>
 
     <div class="content">
         <h3>Accueil</h3>
-        <p>Bienvenue sur mon portfolio !</p>
+        <p>
+            Actuellement en 3éme année de BUT Informatique.
+            Je m’intéresse principalement au design, l’art en général et l’intégration web avec JavaScript. Je pratique en autodidacte le domaine de l’illustration et du montage photo et vidéo en plus de mes études.
+            Je cherche à affûter mes compétences de développeur et de designer pour aller dans le développement UI/UX, de l’animation 2D/3D ou du Game Design.
+        </p>
+        <div class="projets">
+            <h4>Projets</h4>
+            <ul>
+                <li>Question pour un champignon</li>
+                <li>Cybersouls</li>
+                <li>SWMG : shoot’em up</li>
+                <li>Serveur API Rest : Pizzaland</li>
+                <li>Mes hobbies</li>
+            </ul>
     </div>
 </body>
 </html>
