--- a/Compétences.html
+++ b/Compétences.html
@@ -18,5 +18,20 @@
         <a href="CV.pdf">CV</a>
         <a href="Contact.html">Contact</a>
     </div>
+
+    <div class="skills">
+        <h3>Compétences</h3>
+        <ul>
+            <li><img src="img/HTML.png" alt="HTML"></li>
+            <li><img src="img/CSS.png" alt="CSS"></li>
+            <li><img src="img/javascript.png" alt="JavaScript"></li>
+            <li><img src="img/python.png" alt="Python"></li>
+            <li><img src="img/java.png" alt="Java"></li>
+            <li><img src="img/sql.png" alt="SQL"></li>
+            <li><img src="img/git.png" alt="Git"></li>
+            <li><img src="img/Linux.png" alt="Linux"></li>
+            <li><img src="img/postgres.png" alt="postgres"></li>
+        </ul>        
+    </div>
 </body>
 </html>
