--- a/Experience.html
+++ b/Experience.html
@@ -22,13 +22,18 @@
         <a href="Experience.html">Expériences</a>
     </div>
 
-    <div class="contact">
-        <h3>Contactez-moi</h3>
+    <div class="work">
+        <h3>Expériences</h3>
+        <h4>Stages</h4>
         <ul>
-            <li><a href="mailto:theo_vienne@yahoo.fr">Email : theo_vienne@yahoo.fr</a></li>
-            <li><a href="tel:+33619515793">Téléphone : 0619515793</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/th%C3%A9o-vienne-0ab676228/" target="_blank">Théo Vienne</a></li>
-            <li>GitHub: <a href="https://github.com/Alldwiin" target="_blank">Alldwiin</a></li>
+            <li>Stage de 2éme année : Développeur Python au L2EP dans l'équipe OMN - 2024</li>
+            <li>Stage Mise en Rayon Leclerc – 2022</li>
+            <li>Stage Découverte Réseaux Leclerc – 2017</li>
+        </ul>
+        <h4>Emplois</h4>
+        <ul>
+            <li>Manutention Agroalimentaire – 2021</li>
+            <li>Service Civique à Unis Cité Cœur de Flandres – 2022</li>
         </ul>
     </div>
 </body>
