--- a/Projets.html
+++ b/Projets.html
@@ -23,21 +23,16 @@
     </div>
 
     <div class="content">
-        <h3>Accueil</h3>
-        <p>
-            Actuellement en 3éme année de BUT Informatique.
-            Je m’intéresse principalement au design, l’art en général et l’intégration web avec JavaScript. Je pratique en autodidacte le domaine de l’illustration et du montage photo et vidéo en plus de mes études.
-            Je cherche à affûter mes compétences de développeur et de designer pour aller dans le développement UI/UX, de l’animation 2D/3D ou du Game Design.
-        </p>
         <div class="projets">
             <h4>Projets</h4>
             <ul>
                 <li>Question pour un champignon</li>
                 <li>Cybersouls</li>
-                <li>SWMG : shoot’em up</li>
+                <li>SWMG : shoot em up</li>
                 <li>Serveur API Rest : Pizzaland</li>
                 <li>Mes hobbies</li>
             </ul>
+        </div>
     </div>
 </body>
 </html>
