ajoute encore plein de truc

--- a/Compétences.html
+++ b/Compétences.html
@@ -36,7 +36,6 @@
     </div>
 
     <div class="skills">
-        <h3>Compétences</h3>
         <h4>Compétences de Développement</h4>
         <ul>
             <li onclick="showPopup({title: 'HTML', description: 'Langage de balisage utilisé pour structurer le contenu sur le web.'})"><img src="img/HTML.png" alt="HTML"></li>
@@ -50,6 +49,13 @@
         <ul>
             <li onclick="showPopup({title: 'Spring Boot', description: 'Framework Java utilisé pour créer des applications web robustes.'})"><img src="img/spring.png" alt="Spring Boot"></li>
             <li onclick="showPopup({title: 'React', description: 'Bibliothèque JavaScript pour construire des interfaces utilisateur.'})"><img src="img/react.png" alt="React"></li>
+        </ul>
+        <h4>Outils et Méthodologies</h4>
+        <ul>
+            <li onclick="showPopup({title: 'Méthode Agile', description: 'Approche de gestion de projet favorisant l\'adaptabilité et la collaboration.'})"><img src="img/agile.jpg" alt="Méthode Agile"></li>
+            <li onclick="showPopup({title: 'Git', description: 'Système de contrôle de version distribué pour suivre les modifications du code source.'})"><img src="img/git.png" alt="Git"></li>
+            <li onclick="showPopup({title: 'Linux', description: 'Système d\'exploitation open-source utilisé pour les serveurs, les ordinateurs de bureau et les appareils embarqués.'})"><img src="img/linux.png" alt="Linux"></li>
+            <li onclick="showPopup({title: 'CI/CD', description: 'Intégration et déploiment continue de sites, logiciels et applications.'})"><img src="img/cicd.webp" alt="CI/CD"></li>
         </ul>
         <h4>Soft Skills</h4>
         <ul>
