--- a/EmulateurRiscFive.html
+++ b/EmulateurRiscFive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Théo Vienne</title>
+    <title>Emulateur Risc-Five en C</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,18 +23,8 @@
     </div>
 
     <div class="content">
-        <div class="projets">
-            <h4>Projets</h4>
-            <ul>
-                <li><a href="QuestionPourUnChampignon.html">Question pour un champignon</a></li>
-                <li><a href="Cybersouls.html">Cybersouls</a></li>
-                <li><a href="SWMG.html">SWMG : shoot em up</a></li>
-                <li><a href="Pizzaland.html">Serveur API Rest : Pizzaland</a></li>
-                <li><a href="RendezVous.html">Application Spring-Boot : Site de prise de rendez-vous</a></li>
-                <li><a href="EmulateurRiscFive.html">Emulateur Risc-Five en C</a></li>
-                <li><a href="Hobbies.html">Mes hobbies</a></li>
-            </ul>
-        </div>
+        <h3>Emulateur Risc-Five en C</h3>
+        <p>Description du projet "Emulateur Risc-Five en C".</p>
     </div>
 </body>
 </html>
