--- a/Accueil.html
+++ b/Accueil.html
@@ -29,15 +29,26 @@
             Je m’intéresse principalement au design, l’art en général et l’intégration web avec JavaScript. Je pratique en autodidacte le domaine de l’illustration et du montage photo et vidéo en plus de mes études.
             Je cherche à affûter mes compétences de développeur et de designer pour aller dans le développement UI/UX, de l’animation 2D/3D ou du Game Design.
         </p>
-        <div class="projets">
-            <h4>Projets</h4>
+
+        <!-- New Introduction Section -->
+        <section class="introduction">
+            <h3>Introduction</h3>
+            <p>
+                Bienvenue sur mon portfolio ! Vous trouverez ici un aperçu de mes compétences, mes projets récents, et mon parcours professionnel. N'hésitez pas à me contacter pour toute collaboration ou opportunité.
+            </p>
+        </section>
+
+        <!-- New Skills Summary Section -->
+        <section class="skills-summary">
+            <h3>Résumé des Compétences</h3>
             <ul>
-                <li>Question pour un champignon</li>
-                <li>Cybersouls</li>
-                <li>SWMG : shoot’em up</li>
-                <li>Serveur API Rest : Pizzaland</li>
-                <li>Mes hobbies</li>
+                <li>Développement Web: HTML, CSS, JavaScript, React</li>
+                <li>Design & montage: Photoshop, GIMP, Capcut</li>
+                <li>Animation: Krita</li>
+                <li>Programmation: Python, Java</li>
             </ul>
+        </section>
+
     </div>
 </body>
 </html>
